fixed spacing in 3 images in restaurant2

--- a/css/main.css
+++ b/css/main.css
@@ -757,7 +757,6 @@ body {
   width: 85%;
   margin: 60px auto; 90px;
   position: relative;
-
 }
 
 .restaurant2-header {
@@ -812,9 +811,11 @@ body {
   letter-spacing: 1;
 }
 
-.restaurant2-img2,
-.restaurant2-img3,
-.restaurant2-img4 {
+.restaurant2-img5,
+.restaurant2-img6,
+.restaurant2-img7,
+.restaurant2-img8,
+.restaurant2-img9 {
   width: 100%;
   margin: 20 0;
 }
@@ -1163,10 +1164,11 @@ body {
 .section-tail-text {
   background-color: #fff;
   text-align: center;
-  padding: 10 0;
+  padding: 8 0;
 }
 
 .tail-text {
   margin: 0;
-  font-size: .65em;
+  font-size: .63em;
+  letter-spacing: .4;
 }
